--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>subbus-kitchen-canvas</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Subbu's Kitchen Website" />
+    <meta name="author" content="Dream Team Services" />
 
     <meta property="og:title" content="subbus-kitchen-canvas" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Subbu's Kitchen Website" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="#" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@dreamteamservices" />
     <meta name="twitter:image" content="#" />
   </head>
 
