--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>subbus-kitchen-canvas</title>
-    <meta name="description" content="Subbu's Kitchen Website" />
+    <title>gemini foods-canvas</title>
+    <meta name="description" content="gemini's foods Website" />
     <meta name="author" content="Dream Team Services" />
 
-    <meta property="og:title" content="subbus-kitchen-canvas" />
-    <meta property="og:description" content="Subbu's Kitchen Website" />
+    <meta property="og:title" content="gemini foods-canvas" />
+    <meta property="og:description" content="gemini's foods Website" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="#" />
 
